Disable the menu items instead of the whole split button when payload is zero.  And fixed a z-index issue with the menu and IE. (#1055)

--- a/recon/app/styles/recon/base/button-menu/_button-menu.scss
+++ b/recon/app/styles/recon/base/button-menu/_button-menu.scss
@@ -2,7 +2,7 @@
   position: absolute;
   left: 0;
   @include rsa-font(body, default, false);
-  z-index: 1000;
+  z-index: 20000;
   display: none;
   float: left;
   min-width: 151px;
@@ -26,6 +26,12 @@
     clear: both;
     color: rsa-color(gray, lightest);
     text-decoration: none;
+  }
+
+  li a.disabled {
+    pointer-events: none;
+    cursor: default;
+    color: rsa-color(gray, base);
   }
 
   li a:hover {
